Fixed workshop image resizing and button overlap

--- a/css/shared.css
+++ b/css/shared.css
@@ -117,9 +117,9 @@ a {
 }
 
 .workshop-img {
-	height: 170px;
+	height: auto;
 	margin-bottom: 20px;
-	width: auto;
+	width: 447px;
 	outline: none;
 	box-shadow: 0 2px 4px 0 #0000001e, 0 1px 3px 0 #0000002f;
 }
@@ -165,6 +165,7 @@ a {
 	cursor: pointer;
 	box-shadow: 0 2px 4px 0 #0000001e, 0 1px 3px 0 #0000002f;
 	margin: auto 20px;
+	margin-bottom: 20px;	
 }
 
 .standard-btn:hover {
